--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,73 @@
+:root {
+  --primary: #00B7FF;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: var(--primary);
+}
+
+.item,.category {
+  margin: 1rem 0;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.item-name,.category-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.item-category {
+  margin: 0.25rem 0;
+}
+
+.item-price {
+  font-weight: bold;
+  margin: 0.5rem 0;
+}
+
+.item-price::before {
+  content: '$';
+}
+
+.category-list {
+  display: flex;
+  gap: 1rem;
+}
+
+.category-name {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0.5rem 0;
+}
+
+.buttons {
+  display: flex;
+  gap: 0.5rem
+}
+
+.btn {
+  text-decoration: none;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  color: black;
+  cursor: pointer;
+}
+
+.btn-primary {
+  color: white;
+  background-color: var(--primary);
+}
+
+.btn-danger {
+  color: white;
+  background-color: #dc2626;
 }
