--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,3 +71,19 @@ a {
   color: white;
   background-color: #dc2626;
 }
+
+.form-control {
+  margin: 1rem 0;
+}
+
+.form-control input {
+  display: block;
+  font-size: 1rem;
+  padding: 0.2rem;
+}
+
+.form-control textarea {
+  display: block;
+  font-size: 1rem;
+  padding: 0.2rem;
+}
